--- a/findly-builder/src/app/scss/bt-styleguide.scss
+++ b/findly-builder/src/app/scss/bt-styleguide.scss
@@ -201,9 +201,8 @@ and open the template in the editor.
         border: solid 1px #0D6EFD;
     }
     &:disabled{
-        background: #0D6EFD;
-        color: #ffff;
-        opacity: 0.5;
+        background: #EFF0F1;
+        color: #BDC1C6;
     }
     &.btn_md{
         height: 30px;
