--- a/findly-builder/src/app/components/result-ranking/result-ranking.component.html
+++ b/findly-builder/src/app/components/result-ranking/result-ranking.component.html
@@ -3,14 +3,14 @@
         <mat-spinner diameter="18" strokeWidth="2"></mat-spinner>
         <span class="please-wait-message">{{'please_wait' | translate}}</span>
     </div>
-    <div class="header-sec col-12 row m-0" *ngIf="!nextPage&&!loadingContent">
+    <div class="header-sec col-12 row m-0" *ngIf="!nextPage&& loadingContent1">
         <div class="col-4 p-0">Result Ranking</div>     
         </div>
-    <ng-container *ngIf="!nextPage&&!loadingContent">
+    <ng-container *ngIf="!nextPage&& loadingContent1">
         <perfect-scrollbar class="empty-scroll">
         <div  class="empty-landing-screen" >
           <div class="img-block"*ngIf="!emptyItems"><img class="action_icon" (load)="imageLoad()" src="assets/images/resultRanking-empty.svg"></div>
-          <ng-container>
+          <ng-container *ngIf="loadImageText">
               <div class="empty-title">You haven’t added any queries yet!</div>
               <div class="desc-text">Results Ranking is an interactive and visual way to tune results. SearchAssist allows you to preview and customize the search results as per the business needs 
               </div>
