--- a/findly-builder/src/app/components/synonyms/synonyms.component.html
+++ b/findly-builder/src/app/components/synonyms/synonyms.component.html
@@ -5,7 +5,7 @@
     <span class="please-wait-message">{{'synonyms.please_wait' | translate }}</span>
   </div>
   <div class="table-list-content">
-    <div class="kr-sg-data-table" *ngIf="!loadingContent">
+    <div class="kr-sg-data-table" *ngIf="loadingContent1">
       <div class="header-sec col-12 row m-0">
         <div class="col-4 p-0">Synonyms</div>
 
@@ -114,7 +114,7 @@
       <div class="desc">{{'synonyms.please_add_synonyms'| translate}}</div> -->
 
         <div class="img-block"*ngIf="!emptyItems"><img class="action_icon" (load)="imageLoad()"src="assets/images/synonyms.empty-svg.svg"></div>
-        <ng-container>
+        <ng-container *ngIf="loadImageText">
             <div class="empty-title">You haven’t added any synonyms data yet!</div>
             <div class="desc-text"> Synonyms are a set of equivalent words that are considered to expand search queries to improve findability. SearchAssist allows you to define synonym & one-way synonym.
             </div>
